--- a/package.json
+++ b/package.json
@@ -4,9 +4,20 @@
   "description": "Angular 2, webpack, sass starter project",
   "main": "src/index.html",
   "scripts": {
-    "start": "webpack-dev-server --inline --hot --progress --port 3000",
+    "start": "better-npm-run start",
     "test": "karma start",
     "build": "rimraf dist && webpack --config config/webpack.prod.js --progress --profile --bail"
+  },
+  "betterScripts": {
+    "start": {
+      "command": "webpack-dev-server --inline --hot --progress",
+      "env": {
+        "NODE_ENV": "development",
+        "PORT": 3000,
+        "HOST": "localhost",
+        "DEV_TOOLS": true
+      }
+    }
   },
   "repository": {
     "type": "git",
@@ -18,8 +29,7 @@
     "bootstrap",
     "sass",
     "typescript",
-    "redux",
-    "starter"
+    "redux"
   ],
   "author": {
     "name": "David Velásquez",
@@ -57,6 +67,9 @@
     "@types/node": "^6.0.45",
     "angular2-template-loader": "^0.4.0",
     "awesome-typescript-loader": "^2.2.4",
+    "better-npm-run": "0.0.14",
+    "bootstrap-loader": "^1.0.10",
+    "bootstrap-sass": "^3.3.7",
     "codelyzer": "^2.0.0-beta.4",
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
