--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "bootstrap-loader": "^2.0.0-beta.3",
     "bootstrap-sass": "^3.3.7",
     "codelyzer": "^2.0.0-beta.4",
+    "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.26.1",
     "extract-text-webpack-plugin": "2.0.0-beta.5",
     "file-loader": "^0.9.0",
